# Tamagochi

./: CMNDarea.cpp  CMNDarea.h  Character.cpp  README.md  Tamagochi.sln
Tamagochi/: CMNDarea.cpp  CMakeLists.txt  Character.cpp  Character.h  ConsolGR.cpp  ConsolGR.h  Loger.cpp  Loger.h  Spider.cpp  Spider.h  Tamagochi.vcxproj  Tamagochi.vcxproj.filters  root.cpp
